--- a/app/views/gameplay/gameplay.html.haml
+++ b/app/views/gameplay/gameplay.html.haml
@@ -21,7 +21,7 @@
         %tbody
           %tr
             %td.gameplay-scoreboard-team-names Away
-            %td
+            %td#gameplay-scoreboard-top-inning-1
             %td
             %td
             %td
@@ -169,7 +169,7 @@
             %td 3
             %td 3.45
   .row
-    #gameplay-at-bat.col-md-4.col-md-offset-4.panel
+    #gameplay-at-bat.col-md-2.col-md-offset-5.panel
       %div
         #gameplay-at-bat-balls Ball
         #gameplay-at-bat-ball-indicator1.glyphicon.glyphicon-unchecked
