--- a/app/views/gameplay/gameplay.html.haml
+++ b/app/views/gameplay/gameplay.html.haml
@@ -182,7 +182,6 @@
         #gameplay-at-bat-out Out
         #gameplay-at-bat-out-indicator1.glyphicon.glyphicon-unchecked
         #gameplay-at-bat-out-indicator2.glyphicon.glyphicon-unchecked
-  .row
-    #start-button.col-md-2.col-md-offset-5.btn.btn-primary Start
+  #start-button.btn.btn-primary Start
   .row
     #gameplay-game-report.col-md-8.col-md-offset-2.panel
