resolving some bugs during live play. Close to rooting them all out

--- a/app/assets/stylesheets/gameplay.css.scss
+++ b/app/assets/stylesheets/gameplay.css.scss
@@ -242,5 +242,5 @@ th.gameplay-scoreboard-team-names  {
 #gameplay-game-report {
   height: 500px;
   border: solid 1px black;
-  overflow: scroll;
+  overflow-y: auto;
 }
