--- a/app/assets/stylesheets/gameplay.css.scss
+++ b/app/assets/stylesheets/gameplay.css.scss
@@ -241,6 +241,50 @@ th.gameplay-scoreboard-team-names  {
 
 #gameplay-game-report {
   height: 500px;
+  padding-bottom: 200px;
   border: solid 1px black;
-  overflow-y: auto;
+  overflow: scroll;
+}
+
+#gameplay-game-report-outline {
+  margin-top: 30px;
+  margin-bottom: 10px;
+  padding: 5px;
+  width: 180px;
+  border: solid 5px black;
+  font-size: large;
+  text-align: center;
+}
+
+#gameplay-game-report-next-batter {
+  padding: 2px;
+  width: 170px;
+  margin-bottom: 5px;
+  font-size: x-small;
+  font-style: italic;
+  text-align: center;
+}
+
+#gameplay-game-report-result {
+  padding: 2px;
+  width: 170px;
+  background-color: lightgrey;
+  border: solid 1px black;
+  font-size: medium;
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+#gameplay-game-report-balls-strikes {
+
+}
+
+#gameplay-game-report-game-over {
+  font-size: xx-large;
+  font-weight: bold;
+  border: 3px black solid;
+  text-align: center;
+  margin: 20px;
+  width: 250px;
 }
