matching up JSON from controller to JS

--- a/app/views/game_display/game_display.html.haml
+++ b/app/views/game_display/game_display.html.haml
@@ -45,7 +45,7 @@
   .row
     .col-md-3
       #gamedisplay-away-team.panel
-        %h4 Batters
+        %h4.line-up-title Batters
         %table#lineup-table.table
           %tr
             %th.line-up-name Name
@@ -87,7 +87,7 @@
             %td.line-up-name#gamedisplay-away-batter-9-name Wilson Smith
             %td SS
             %td .333
-        %h4 Pitchers
+        %h4.line-up-title Pitchers
         %table.table
           %tr
             %th Name
@@ -119,7 +119,7 @@
           #baseball-field-baseline-left
     .col-md-3.panel
       #gamedisplay-home-team.panel
-        %h4 Batters
+        %h4.line-up-title Batters
         %table.table
           %tr
             %th.line-up-name Name
@@ -161,7 +161,7 @@
             %td.line-up-name#gamedisplay-home-batter-9-name Wilson Smith
             %td SS
             %td .333
-        %h4 Pitchers
+        %h4.line-up-title Pitchers
         %table.table
           %tr
             %th Name
