--- a/app/assets/stylesheets/game_display.css.scss
+++ b/app/assets/stylesheets/game_display.css.scss
@@ -47,8 +47,12 @@ table#lineup-table {
   table-layout: fixed;
 }
 
+.line-up-title {
+  text-align: center;
+}
+
 .line-up-name {
-  font-size: x-small;
+  font-size: small;
   width: 160px;
   text-align: center;
 }
