finally got AJAX to load up the teams and players from Rails side

--- a/app/assets/stylesheets/game_display.css.scss
+++ b/app/assets/stylesheets/game_display.css.scss
@@ -9,6 +9,13 @@
   margin-top: 50px;
 }
 
+#home-team-name {
+}
+
+#versus {
+
+}
+
 #gamedisplay-scoreboard {
   height: 70px;
   padding-left: 60px;
