--- a/app/views/game_display/game_display.html.haml
+++ b/app/views/game_display/game_display.html.haml
@@ -1,6 +1,9 @@
 .container
   .row
-    #gamedisplay-title.col-md-12.panel Away Avengers Vs. Home Hercules
+    #gamedisplay-title.col-md-12.panel
+      %span#away-team-name Away Avengers
+      %span#versus Vs.
+      %span#home-team-name Home Hercules
   .row
     #gamedisplay-scoreboard.col-md-6.col-md-offset-3.panel
       %table#gamedisplay-scoreboard-table
