working on hitting pitching probabilities

--- a/app/views/game_display/game_display.html.haml
+++ b/app/views/game_display/game_display.html.haml
@@ -1,9 +1,9 @@
 .container
   .row
     #gamedisplay-title.col-md-12.panel
-      %span#away-team-name Away Avengers
+      %span#away-team-name
       %span#versus Vs.
-      %span#home-team-name Home Hercules
+      %span#home-team-name
   .row
     #gamedisplay-scoreboard.col-md-6.col-md-offset-3.panel
       %table#gamedisplay-scoreboard-table
@@ -55,39 +55,39 @@
             %th.line-up-position Pos.
             %th.line-up-average Avg.
           %tr
-            %td.line-up-name#gamedisplay-away-batter-1-name Wilson Smith
+            %td.line-up-name#gamedisplay-away-batter-1-name
             %td SS
             %td .333
           %tr
-            %td.line-up-name#gamedisplay-away-batter-2-name Wilson Smith
+            %td.line-up-name#gamedisplay-away-batter-2-name
             %td SS
             %td .333
           %tr
-            %td.line-up-name#gamedisplay-away-batter-3-name Wilson Smith
+            %td.line-up-name#gamedisplay-away-batter-3-name
             %td SS
             %td .333
           %tr
-            %td.line-up-name#gamedisplay-away-batter-4-name Wilson Smith
+            %td.line-up-name#gamedisplay-away-batter-4-name
             %td SS
             %td .333
           %tr
-            %td.line-up-name#gamedisplay-away-batter-5-name Wilson Smith
+            %td.line-up-name#gamedisplay-away-batter-5-name
             %td SS
             %td .333
           %tr
-            %td.line-up-name#gamedisplay-away-batter-6-name Wilson Smith
+            %td.line-up-name#gamedisplay-away-batter-6-name
             %td SS
             %td .333
           %tr
-            %td.line-up-name#gamedisplay-away-batter-7-name Wilson Smith
+            %td.line-up-name#gamedisplay-away-batter-7-name
             %td SS
             %td .333
           %tr
-            %td.line-up-name#gamedisplay-away-batter-8-name Wilson Smith
+            %td.line-up-name#gamedisplay-away-batter-8-name
             %td SS
             %td .333
           %tr
-            %td.line-up-name#gamedisplay-away-batter-9-name Wilson Smith
+            %td.line-up-name#gamedisplay-away-batter-9-name
             %td SS
             %td .333
         %h4.line-up-title Pitchers
@@ -129,39 +129,39 @@
             %th.line-up-position Pos.
             %th.line-up-average Avg.
           %tr
-            %td.line-up-name#gamedisplay-home-batter-1-name Wilson Smith
+            %td.line-up-name#gamedisplay-home-batter-1-name
             %td SS
             %td .333
           %tr
-            %td.line-up-name#gamedisplay-home-batter-2-name Wilson Smith
+            %td.line-up-name#gamedisplay-home-batter-2-name
             %td SS
             %td .333
           %tr
-            %td.line-up-name#gamedisplay-home-batter-3-name Wilson Smith
+            %td.line-up-name#gamedisplay-home-batter-3-name
             %td SS
             %td .333
           %tr
-            %td.line-up-name#gamedisplay-home-batter-4-name Wilson Smith
+            %td.line-up-name#gamedisplay-home-batter-4-name
             %td SS
             %td .333
           %tr
-            %td.line-up-name#gamedisplay-home-batter-5-name Wilson Smith
+            %td.line-up-name#gamedisplay-home-batter-5-name
             %td SS
             %td .333
           %tr
-            %td.line-up-name#gamedisplay-home-batter-6-name Wilson Smith
+            %td.line-up-name#gamedisplay-home-batter-6-name
             %td SS
             %td .333
           %tr
-            %td.line-up-name#gamedisplay-home-batter-7-name Wilson Smith
+            %td.line-up-name#gamedisplay-home-batter-7-name
             %td SS
             %td .333
           %tr
-            %td.line-up-name#gamedisplay-home-batter-8-name Wilson Smith
+            %td.line-up-name#gamedisplay-home-batter-8-name
             %td SS
             %td .333
           %tr
-            %td.line-up-name#gamedisplay-home-batter-9-name Wilson Smith
+            %td.line-up-name#gamedisplay-home-batter-9-name
             %td SS
             %td .333
         %h4.line-up-title Pitchers
