--- a/app/views/game_display/game_display.html.haml
+++ b/app/views/game_display/game_display.html.haml
@@ -56,39 +56,39 @@
             %th.line-up-average Avg.
           %tr
             %td.line-up-name#gamedisplay-away-batter-1-name
-            %td SS
+            %td.line-up-name#gamedisplay-away-batter-1-position
             %td .333
           %tr
             %td.line-up-name#gamedisplay-away-batter-2-name
-            %td SS
+            %td.line-up-name#gamedisplay-away-batter-2-position
             %td .333
           %tr
             %td.line-up-name#gamedisplay-away-batter-3-name
-            %td SS
+            %td.line-up-name#gamedisplay-away-batter-3-position
             %td .333
           %tr
             %td.line-up-name#gamedisplay-away-batter-4-name
-            %td SS
+            %td.line-up-name#gamedisplay-away-batter-4-position
             %td .333
           %tr
             %td.line-up-name#gamedisplay-away-batter-5-name
-            %td SS
+            %td.line-up-name#gamedisplay-away-batter-5-position
             %td .333
           %tr
             %td.line-up-name#gamedisplay-away-batter-6-name
-            %td SS
+            %td.line-up-name#gamedisplay-away-batter-6-position
             %td .333
           %tr
             %td.line-up-name#gamedisplay-away-batter-7-name
-            %td SS
+            %td.line-up-name#gamedisplay-away-batter-7-position
             %td .333
           %tr
             %td.line-up-name#gamedisplay-away-batter-8-name
-            %td SS
+            %td.line-up-name#gamedisplay-away-batter-8-position
             %td .333
           %tr
             %td.line-up-name#gamedisplay-away-batter-9-name
-            %td SS
+            %td.line-up-name#gamedisplay-away-batter-9-position
             %td .333
         %h4.line-up-title Pitchers
         %table.table
@@ -97,11 +97,7 @@
             %th Strikouts
             %th ERA
           %tr
-            %td.line-up-name John Billings
-            %td 3
-            %td 3.45
-          %tr
-            %td.line-up-name John Billings
+            %td.line-up-name#gamedisplay-away-pitcher-name John Billings
             %td 3
             %td 3.45
     .col-md-6.panel
@@ -130,39 +126,39 @@
             %th.line-up-average Avg.
           %tr
             %td.line-up-name#gamedisplay-home-batter-1-name
-            %td SS
+            %td.line-up-name#gamedisplay-home-batter-1-position
             %td .333
           %tr
             %td.line-up-name#gamedisplay-home-batter-2-name
-            %td SS
+            %td.line-up-name#gamedisplay-home-batter-2-position
             %td .333
           %tr
             %td.line-up-name#gamedisplay-home-batter-3-name
-            %td SS
+            %td.line-up-name#gamedisplay-home-batter-3-position
             %td .333
           %tr
             %td.line-up-name#gamedisplay-home-batter-4-name
-            %td SS
+            %td.line-up-name#gamedisplay-home-batter-4-position
             %td .333
           %tr
             %td.line-up-name#gamedisplay-home-batter-5-name
-            %td SS
+            %td.line-up-name#gamedisplay-home-batter-5-position
             %td .333
           %tr
             %td.line-up-name#gamedisplay-home-batter-6-name
-            %td SS
+            %td.line-up-name#gamedisplay-home-batter-6-position
             %td .333
           %tr
             %td.line-up-name#gamedisplay-home-batter-7-name
-            %td SS
+            %td.line-up-name#gamedisplay-home-batter-7-position
             %td .333
           %tr
             %td.line-up-name#gamedisplay-home-batter-8-name
-            %td SS
+            %td.line-up-name#gamedisplay-home-batter-8-position
             %td .333
           %tr
             %td.line-up-name#gamedisplay-home-batter-9-name
-            %td SS
+            %td.line-up-name#gamedisplay-home-batter-9-position
             %td .333
         %h4.line-up-title Pitchers
         %table.table
@@ -171,11 +167,7 @@
             %th Strikouts
             %th ERA
           %tr
-            %td.line-up-name John Billings
-            %td 3
-            %td 3.45
-          %tr
-            %td.line-up-name John Billings
+            %td.line-up-name#gamedisplay-home-pitcher-name John Billings
             %td 3
             %td 3.45
   .row
