transition between highlighting current batter/pitcher

--- a/app/assets/stylesheets/game_display.css.scss
+++ b/app/assets/stylesheets/game_display.css.scss
@@ -327,3 +327,10 @@ table#lineup-table {
   background-color: orange;
   color: darkblue;
 }
+
+.line-up-name {
+  -webkit-transition: all 0.8s ease;
+  -moz-transition: all 0.8s ease;
+  -o-transition: all 0.8s ease;
+  transition: all 0.8s ease;
+}
